# airflow-dev

./: .gitignore  README.md  compose.yaml  pyproject.toml  restart-airflow.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_of_bugs.md  issue_of_features.md
.github/workflows/: cicd.yaml  init_and_deploy.yaml
dags/: 01-empty-operator.py  02-email-operator.py  03-python-operator.py  04-preprocess_workflow.py
data/spark/: log-large.csv.REMOVED.git-id
experiments/: insert_to_db.py  read_logs.py
experiments/ml/: generate_data.py  load_data.py  model.py
