[tool.poetry]
name = "airflow-practice"
version = "0.1.0"
description = ""
authors = ["DOHK team <dohk@team.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
sqlalchemy = "1.4.52"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pyspark = "^3.5.3"
pybind11 = "2.12"
scikit-learn = "^1.5.2"
catboost = "^1.2.7"
seaborn = "^0.13.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
